--- a/favorite.html
+++ b/favorite.html
@@ -88,6 +88,13 @@
             <img id="logoSvg" src="./img/LOGO/tmdb.png">
             <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
         </footer>
+        <script type="text/javascript" src="./js/favorite.js"></script>
+        <script type="text/javascript" src="./js/index.js"></script>
+        <script type="text/javascript" src="./js/search-result.js"></script>
+        <script type="text/javascript" src="./js/detail-genre.js"></script>
+        <script type="text/javascript" src="./js/detail-movie.js"></script>
+        <script type="text/javascript" src="./js/detail-serie.js"></script>
+        <script type="text/javascript" src="./js/genres.js"></script>
     </body>
 
 </html>
