intento detalle generos

--- a/detail-genre.html
+++ b/detail-genre.html
@@ -31,9 +31,9 @@
         </header>
 
         <main class="main_detalles"> 
-                    <h3>Romance</h3>
-                    <div class ="portada">
-                        <div class="pelicula">
+                    <h3 id="nombre-genero"></h3>
+                    <div id="inner-genero" class ="portada">
+                        <!-- <div class="pelicula">
                             <a href="./detail-genre.html"><img class="fotos" src="./img/ROMANCE/PELICULAS/orgullo y prejuicio.jpg" alt="Orgullo y prejuicio"></a>
                             <div class="titfav">
                                 <h4>Pride and Prejudice</h4>
@@ -76,7 +76,7 @@
                                 <i class="fa-regular fa-heart" style="color: #ffffff;"></i>
                             </div>
                             <p>Fecha de estreno: 2011</p>
-                        </div>
+                        </div> -->
                     </div>
         </main>
 
