detail movie/series

--- a/detail-serie.html
+++ b/detail-serie.html
@@ -36,13 +36,13 @@
 
                 <article>
                     <div class="dtl_pelicula">
-                        <a name="blair"><h3>Gossip Girl</h3></a>
+                        <!-- <a name="blair"><h3>Gossip Girl</h3></a>
                         <p>Calificacion: 7.5/10 | 2007 | Romance-Drama |  </p>
                         <div class="info"> 
                             <img class="fotos" src="./img/ROMANCE/SERIES/91I8ElmqRZL._AC_SL1500_.jpg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/eCg1RN-dyQk?si=RPc8lyQ1MDIUSDY1" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
                             <p class="sinopsis">Narra las extravagantes vidas de un grupo de chicos de la alta sociedad de Nueva York que asisten al mismo instituto en el Upper East Side y su vida gira en torno a las clases, las fiestas más salvajes, la ropa y el sexo. Están inmersos en un círculo vicioso de rumores, mentiras y secretos alimentado por el blog más popular del colegio: Gossip Girl.</p>
-                        </div>
+                        </div> -->
                     </div>
                 </article>
                 <!--
