--- a/detail-genre.html
+++ b/detail-genre.html
@@ -85,6 +85,7 @@
             <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
         </footer>
         <script type="text/javascript" src="./js/detail-genre.js"></script>
+        <script type="text/javascript" src="./js/index.js"></script>
         <script type="text/javascript" src="./js/search-result.js"></script>
     </body>
 
