--- a/detail-movie.html
+++ b/detail-movie.html
@@ -45,7 +45,7 @@
             </section>
 
             <div id="recomendaciones">
-                <button>Get recommendation</button>
+                <button class="botonrecom">Get recommendation</button>
                 <div class="peliculas_recomendacion">
                     <a href=""></a>
                 </div>
