--- a/detail-serie.html
+++ b/detail-serie.html
@@ -36,67 +36,18 @@
 
                 <article>
                     <div class="dtl_pelicula">
-                        <!-- <a name="blair"><h3>Gossip Girl</h3></a>
-                        <p>Calificacion: 7.5/10 | 2007 | Romance-Drama |  </p>
-                        <div class="info"> 
-                            <img class="fotos" src="./img/ROMANCE/SERIES/91I8ElmqRZL._AC_SL1500_.jpg">
-                            <iframe class="trailer" src="https://www.youtube.com/embed/eCg1RN-dyQk?si=RPc8lyQ1MDIUSDY1" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
-                            <p class="sinopsis">Narra las extravagantes vidas de un grupo de chicos de la alta sociedad de Nueva York que asisten al mismo instituto en el Upper East Side y su vida gira en torno a las clases, las fiestas más salvajes, la ropa y el sexo. Están inmersos en un círculo vicioso de rumores, mentiras y secretos alimentado por el blog más popular del colegio: Gossip Girl.</p>
-                        </div> -->
+                        
                     </div>
                 </article>
-                <!--
-                    <article>
-                    <div class="dtl_pelicula">
-                        <a name="phil"><h3>Modern Family</h3></a>
-                        <p>Calificacion: 8.5/10 | 2009 | Comedia |  </p>
-                        <div class="info"> 
-                            <img class="fotos" src="./img/FAMILIA/SERIES/R (5).jpeg" alt="LalaLand">
-                            <iframe class="trailer" src="https://www.youtube.com/embed/Ub_lfN2VMIo?si=BvuKYfXg1hfQ_58I" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
-                            <p class="sinopsis">La serie narra la vida de Jay Pritchett y su familia, todos vecinos del mismo barrio a las afueras de Los Ángeles, y gira en torno a tres tipos de familia: nuclear, extendida y con padres del mismo sexo y está basada en situaciones cómicas que podrían ocurrirle a cualquiera en la vida real.</p>
-                        </div>
-                    </div>
-                </article>
-
-                <article>
-                    <div class="dtl_pelicula">
-                        <a name="out"><h3>Outlander</h3></a>
-                        <p>Calificacion: 8.4/10 | 2014 | Drama-Histórico |  </p>
-                        <div class="info"> 
-                            <img class="fotos" src="./img/ROMANCE/SERIES/outlander.jpg" alt="interstellar">
-                            <iframe class="trailer" src="https://www.youtube.com/embed/PFFKjptRr7Y?si=rJrN6f2-DBRh7gZZ" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
-                            <p class="sinopsis">Durante la Segunda Guerra Mundial, Claire, una enfermera casada, vive una experiencia sorprendente. Durante un viaje a Escocia, la joven visita un misterioso círculo de piedras antiguas. Afectada por un misterioso poder, Claire entra en trance para despertar lejos de su marido, su época y la vida que ha conocido hasta ahora.</p>
-                        </div>
-                    </div>
-                </article>
-
-                <article>
-                    <div class="dtl_pelicula">
-                        <a name="lisa"><h3>The Simpsons</h3></a>
-                        <p>Calificacion: 8.7/10 | 1989 | Comedia |  </p>
-                        <div class="info"> 
-                            <img class="fotos" src="./img/FAMILIA/SERIES/R (7).jpeg">
-                            <iframe class="trailer" src="https://www.youtube.com/embed/pzdnq1zFvOY?si=x-zUYMJYijh8nN_o" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
-                            <p class="sinopsis">La serie es una sátira hacia la sociedad estadounidense que narra la vida y el día a día de una familia de clase media de ese país (cuyos miembros son Homer, Marge, Bart, Lisa y Maggie Simpson) que vive en un pueblo ficticio llamado Springfield.</p>
-                        </div>
-                    </div>
-                </article>
-
-                <article>
-                    <div class="dtl_pelicula">
-                        <a name="mirror"></a>
-                        <h3>Black Mirror</h3>
-                        <p>Calificacion: 8.7/10 | 2011 | Thriller/Ciencia-ficción |  </p>
-                        <div class="info"> 
-                            <img class="fotos" src="./img/THRILLER/SERIE/black mirror.jpg">
-                            <iframe class="trailer" src="https://www.youtube.com/embed/yRUAzGQ3nSY?si=dCdxQL3rowV7Z-L_" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
-                            <p class="sinopsis">La ficción distribuida por Netflix hace un análisis de las nuevas tecnologías de una forma avanzada y futurista que en ocasiones amenazan la integridad de las personas. Un camino por lo peligroso, las obsesiones, la moral, la soledad y los sentimientos envueltos en diferentes mundos controlados por lo tecnológico con un final, en su mayoría, catastrófico, aunque otras veces satisfactorio.                            </p>
-                        </div>
-                    </div>
-                </article>
-                -->
+                
 
             </section>
+
+            <div id="recomendaciones">
+                <button class="botonrecom">Get recommendation</button>
+                <div class="peliculas_recomendacion">        
+                </div>
+            </div>
 
         </main>
 
