cambios en java

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -49,6 +49,11 @@
                 <div class="peliculas_recomendacion">                    
                 </div>
             </div>
+            <div id="reviews">
+                <button class="botonreview">Get review</button>
+                <div class="peli_reviews">                 
+                </div>
+            </div>
 
         </main>
 
