arreglo navegcion entre paginas y js

--- a/detail-serie.html
+++ b/detail-serie.html
@@ -44,13 +44,16 @@
 
             </section>
 
+            <div class="funcion">
+                <button class="botonrecom">You may like...</button>
+                <button class="botonreview">Get review</button>
+            </div>
+
             <div id="recomendaciones">
-                <button class="botonrecom">Get recommendation</button>
                 <div class="peliculas_recomendacion">                    
                 </div>
             </div>
             <div id="reviews">
-                <button class="botonreview">Get review</button>
                 <div class="peli_reviews">                 
                 </div>
             </div>
