--- a/search-result.html
+++ b/search-result.html
@@ -93,6 +93,7 @@
             <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
         </footer>
         <script type="text/javascript" src="./js/search-result.js"></script>
+        <script type="text/javascript" src="./js/detail-movie.js"></script>
         <script type="text/javascript" src="./js/favorite.js"></script>
         
     </body>
