loader de busqueda

--- a/search-result.html
+++ b/search-result.html
@@ -29,7 +29,7 @@
             </nav>
         </header>
 
-        <main class="main_home">
+        <main class="main_home main_res">
             <!-- <section class="seccion1"> 
                     <article class="categoria"> 
                     <h3 id="texto-busqueda">Resultado de búsqueda de:  </h3>
@@ -86,6 +86,10 @@
             </section>
 
 
+        </main>
+
+        <main class="main_load">
+            <img id="loadingGif" src="./img/loading/loading.gif">
         </main>
 
         <footer>
