--- a/detail-genre.html
+++ b/detail-genre.html
@@ -24,7 +24,7 @@
                             <button class="fa-solid fa-magnifying-glass lupa">
                                 <i></i>
                             </button>
-                            <input class="buscar" type="text" name="busqueda" value="" placeholder="Buscar">
+                            <input class="buscar" type="text" name="busqueda" value="" placeholder="Movie searcher">
                         </div>
                 </form>
             </nav>
@@ -85,7 +85,6 @@
             <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
         </footer>
         <script type="text/javascript" src="./js/detail-genre.js"></script>
-        <script type="text/javascript" src="./js/search-result.js"></script>
         <script type="text/javascript" src="./js/index.js"></script>
     </body>
 
