--- a/detail-movie.html
+++ b/detail-movie.html
@@ -24,7 +24,7 @@
                             <button class="fa-solid fa-magnifying-glass lupa">
                                 <i></i>
                             </button>
-                            <input class="buscar" type="text" name="busqueda" value="" placeholder="Buscar">
+                            <input class="buscar" type="text" name="busqueda" value="" placeholder="Movie searcher">
                         </div>
                 </form>
             </nav>
@@ -65,7 +65,6 @@
         </footer>
         <script type="text/javascript" src="./js/detail-movie.js"></script>
         <script type="text/javascript" src="./js/favorite.js"></script>
-        <script type="text/javascript" src="./js/search-result.js"></script>
     </body>
 
 </html>
