--- a/favorite.html
+++ b/favorite.html
@@ -23,18 +23,18 @@
                             <button class="fa-solid fa-magnifying-glass lupa">
                                 <i></i>
                             </button>
-                            <input class="buscar" type="text" name="busqueda" value="" placeholder="Buscar">
+                            <input class="buscar" type="text" name="busqueda" value="" placeholder="Movie searcher">
                         </div>
                 </form>
             </nav>
         </header>
            
-        <main class="main_home">
+    <main class="main_home">
                 <section class="seccion1"> 
                         <article class="categoria"> 
                             <h2> Favoritos </h2>
                             <div class ="portada">
-                                <div class="pelicula">
+                            <!--  <div class="pelicula">
                                     <a href="./detail-movie.html#seb"><img class="fotos" src="./img/ROMANCE/PELICULAS/lalaland.jpg" alt="LalaLand"></a>
                                     <div class="titfav">
                                         <h4>La La Land</h4>
@@ -77,7 +77,7 @@
                                         <i class="fa-regular fa-heart" style="color: #ffffff;"></i>
                                     </div>
                                     <p>Fecha de estreno: 2001</p>
-                                </div>
+                                </div> -->  
                             </div>
                     </article>
                 </section>
@@ -89,7 +89,6 @@
             <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
         </footer>
         <script type="text/javascript" src="./js/favorite.js"></script>
-        <script type="text/javascript" src="./js/search-result.js"></script>
     </body>
 
 </html>
