--- a/genre.html
+++ b/genre.html
@@ -23,7 +23,7 @@
                             <button class="fa-solid fa-magnifying-glass lupa">
                                 <i></i>
                             </button>
-                            <input class="buscar" type="text" name="busqueda" value="" placeholder="Buscar">
+                            <input class="buscar" type="text" name="busqueda" value="" placeholder="Movie searcher">
                         </div>
                 </form>
             </nav>
@@ -53,7 +53,6 @@
             <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
         </footer>
         <script type="text/javascript" src="./js/genres.js"></script>
-        <script type="text/javascript" src="./js/search-result.js"></script>
     </body>
 
 </html>
