--- a/search-result.html
+++ b/search-result.html
@@ -23,7 +23,7 @@
                             <button class="fa-solid fa-magnifying-glass lupa">
                                 <i></i>
                             </button>
-                            <input class="buscar" type="text" name="busqueda" value="" placeholder="Buscar">
+                            <input class="buscar" type="text" name="busqueda" value="" placeholder="Movie searcher">
                         </div>
                 </form>
             </nav>
