--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <button class="fa-solid fa-magnifying-glass lupa">
                                 <i></i>
                             </button>
-                            <input class="buscar" type="text" name="busqueda" value="" placeholder="Buscar">
+                            <input class="buscar" type="text" name="busqueda" value="" placeholder="Movie searcher">
                         </div>
                 </form>
             </nav>
@@ -213,9 +213,9 @@
             <img id="logoSvg" src="./img/LOGO/tmdb.png">
             <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
         </footer>
-        <script type="text/javascript" src="./js/favorite.js"></script>
         <script type="text/javascript" src="./js/index.js"></script>
-        <script type="text/javascript" src="./js/search-result.js"></script>
+        <script type="text/javascript" src="./js/favorite.js"></script>
+
     </body>
 
 </html>
