foto default por si no hay en la api

--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@
                     </article>
 
                 </section>
+                <div id="valor">
+
+                </div>
         </main>
 
         <footer>
